@@ -1,7 +1,9 @@
 package arrays;
 
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -22,32 +24,38 @@ public class ArraysStream {
 		Stream<String> shoppingListStream = shoppingList.stream();
 
 		// for loop in one line
+		System.out.println("*** stream ***");
 		shoppingList.stream().forEach(System.out::println);
-		System.out.println("*** line 24 ***");
+		System.out.println("*** parallelStream ***");
 		shoppingList.parallelStream().forEach(System.out::println);
-		System.out.println("*** line 26 ***");
 
 		// Match
+		System.out.println("*** anyMatch ***");
 		boolean isOnList = shoppingList.stream().anyMatch(item -> item.contains("apples"));
 		System.out.println(isOnList);
-		System.out.println("*** line 31 ***");
 
 		// Filter
-		Stream<String> itemsInAisleStream = shoppingList.stream().filter(item -> item.startsWith("c"));
+		System.out.println("*** filter ***");
+		Stream<String> itemsInAisleStream = shoppingList.stream().filter(x -> x.startsWith("c"));
 		itemsInAisleStream.forEach(System.out::println);
-		System.out.println("*** line 36 ***");
+		System.out.println("*** filter, find first ***");
+		Optional<String> itemsInAisleStream2 = shoppingList.stream().filter(x -> x.startsWith("c")).findFirst();
+		System.out.println(itemsInAisleStream2.get());
 
 		// Map
-		List<Integer> numbersList = List.of(4, 2, 6, 9, 10, 17, 3);
-		Stream<Integer> doubledStream = numbersList.stream().map(n -> n * 2);
+		System.out.println("*** map ***");
+		List<Integer> numberList1 = List.of(3, 5, 8, 13, 21, 34);
+		List<Integer> numberList3 = Arrays.asList(3, 5, 8, 13, 21, 34);
+		List<Integer> numberList9 = new ArrayList<Integer>(Arrays.asList(3, 5, 8, 13, 21, 34));
+		Stream<Integer> doubledStream = numberList1.stream().map(num -> num * 2);
 		doubledStream.forEach(System.out::println);
-		System.out.println("*** line 42 ***");
 
 		// Collect
-		List<Integer> doubledList = numbersList.stream().map(n -> n * 2).collect(Collectors.toList());
+		System.out.println("*** collect ***");
+		List<Integer> doubledList = numberList3.stream().map(n -> n * 2).collect(Collectors.toList());
 		System.out.println(doubledList);
-		System.out.println("*** line 48 ***");
 		
+		System.out.println("*** String ***");
 		List<String> names = List.of("sally", "sarah", "sam");
 		names.stream().map(String::toUpperCase).forEach(System.out::println);
 	}
